refactor text, fix lab

--- a/Esercizi/labs/stonehenge/as5r1/etc/frr/frr.conf
+++ b/Esercizi/labs/stonehenge/as5r1/etc/frr/frr.conf
@@ -15,4 +15,5 @@ router bgp 5
     neighbor 10.3.5.1 remote-as 3
     neighbor 10.3.5.1 description as3r1
 
-    redistribute connected
+    network 5.0.0.0/8
+    network 10.3.5.0/30
