--- a/Esercizi/labs/stonehenge/as1r1/etc/frr/frr.conf
+++ b/Esercizi/labs/stonehenge/as1r1/etc/frr/frr.conf
@@ -1,5 +1,5 @@
 router rip 
-    network 1.0.0./8
+    network 1.0.0.0/8
     redistribute connected
     redistribute bgp
 
@@ -24,4 +24,5 @@ router bgp 1
     neighbor 10.1.3.6 description as3r1
 
     network 1.0.0.0/8
-    redistribute connected
+    network 10.1.2.0/30
+    network 10.1.3.4/30
