--- a/Esercizi/labs/stonehenge/as1r2/etc/frr/frr.conf
+++ b/Esercizi/labs/stonehenge/as1r2/etc/frr/frr.conf
@@ -1,5 +1,5 @@
 router rip 
-    network 1.0.0./8
+    network 1.0.0.0/8
     redistribute connected
     redistribute bgp
 
@@ -23,7 +23,7 @@ router bgp 1
     neighbor 10.1.3.2 route-map localPrefL in
 
     network 1.0.0.0/8
-    redistribute connected
+    network 10.1.3.0/30
 
     ip prefix-list collisionDomainL permit 5.0.0.0/8
 
