--- a/Esercizi/labs/stonehenge/as2r1/etc/frr/frr.conf
+++ b/Esercizi/labs/stonehenge/as2r1/etc/frr/frr.conf
@@ -19,4 +19,7 @@ router bgp 2
     neighbor 10.2.4.2 remote-as 4
     neighbor 10.2.4.2 description as4r1
 
-    redistribute connected
+    network 2.0.0.0/24
+    network 10.1.2.0/30
+    network 10.2.3.0/30
+    network 10.2.4.0/30
