--- a/Esercizi/labs/stonehenge/as3r1/etc/frr/frr.conf
+++ b/Esercizi/labs/stonehenge/as3r1/etc/frr/frr.conf
@@ -22,7 +22,9 @@ router bgp 3
     neighbor 10.3.5.2 remote-as 5
     neighbor 10.3.5.2 description as5r1
 
-    redistribute connected
+    network 10.1.3.0/30
+    network 10.1.3.4/30
+    network 10.3.5.0/30
 
     ip prefix-list denyM seq 5 deny 4.0.0.0/8
     ip prefix-list denyM seq 10 permit any
