--- a/Esercizi/labs/stonehenge/as4r1/etc/frr/frr.conf
+++ b/Esercizi/labs/stonehenge/as4r1/etc/frr/frr.conf
@@ -15,4 +15,5 @@ router bgp 4
     neighbor 10.2.4.1 remote-as 2
     neighbor 10.2.4.1 description as2r1
 
-    redistribute connected
+    network 4.0.0.0/8
+    network 10.2.4.0/30
