--- a/Esercizi/labs/right-weight/ra2/etc/frr/frr.conf
+++ b/Esercizi/labs/right-weight/ra2/etc/frr/frr.conf
@@ -4,7 +4,7 @@ ospf cost 50000
 router ospf 
 network 2.0.0.0/8 area 0.0.0.0
 network 23.0.0.0/30 area 2.2.2.2
-area 2.2.2.2 stub
+area 2.2.2.2 stub no-summary
 
 default-information originate always
 redistribute kernel
