--- a/Esercizi/labs/right-weight/rb3/etc/frr/frr.conf
+++ b/Esercizi/labs/right-weight/rb3/etc/frr/frr.conf
@@ -1,7 +1,8 @@
 router ospf 
-network 3.0.0.0/8 area 3.3.3.3
-network 24.0.0.0/30 area 0.0.0.0
-area 3.3.3.3 stub 
+network 3.0.0.0/8 area 2.2.2.2
+network 24.0.0.0/30 area 2.2.2.2
+area 2.2.2.2 stub 
+redistribute connected
 
 
 log file /var/log/frr/frr.log
