--- a/Esercizi/labs/right-weight/ra3/etc/frr/frr.conf
+++ b/Esercizi/labs/right-weight/ra3/etc/frr/frr.conf
@@ -3,9 +3,9 @@ ospf cost 50000
 
 
 router ospf
-network 23.0.0.0/30 area 0.0.0.0
-network 3.0.0.0/8 area 3.3.3.3
-area 3.3.3.3 stub
-
+network 23.0.0.0/30 area 2.2.2.2
+network 3.0.0.0/8 area 2.2.2.2
+area 2.2.2.2 stub
+redistribute connected
 
 log file /var/log/frr/frr.log
