--- a/Esercizi/labs/right-weight/rc3/etc/frr/frr.conf
+++ b/Esercizi/labs/right-weight/rc3/etc/frr/frr.conf
@@ -1,6 +1,7 @@
 router ospf 
-network 3.0.0.0/8 area 3.3.3.3
-area 3.3.3.3 stub
+network 3.0.0.0/8 area 2.2.2.2
+area 2.2.2.2 stub
+redistribute connected
 
 
 log file /var/log/frr/frr.log
