--- a/Esercizi/etc/frr/frr.conf
+++ b/Esercizi/etc/frr/frr.conf
@@ -1,29 +1,77 @@
 !
 ! FRRouting configuration file
 !
+!  README: 
+!  - titolo delle (sotto)sezioni in maiuscolo
+!  - valori di default tra parentesi tonde (default)
+!  - valori da inserire tra parentesi graffe {valore}
+!       - possono essere specificate opzioni {valore: opzione1, opzione2, opzione3}
+!       - tra queste bisogna sceglierne solo una
+!  - parametri/comandi opzionali tra parentesi quadre [opzionale] 
+!       - se non ci sono si assume sia necessario
+!  - evitare di lasciare commenti (!) sparsi tra le righe o dopo un comando,
+!       - potrebbero impedire di leggere righe adiacenti
+! 
+! CONFIGURARE INTERFACCE:
+!   interface {nome-interfaccia}
+!   {protocollo: ospf} cost {costo: (10), {intero}}
 !
-! CONFIGURATION
-! valori di default tra parentesi tonde (default)
+! CONFIGURARE PROTOCOLLI DI INSTRADAMENTO:
+!   router {protocollo: rip, ospf, bgp {as-id}}
 !
-! Configura interfacce:
-! interface {interfaccia}
-! {protocollo: ospf} cost {costo: (10)}
+!   PROTOCOLLI IGP: 
+!       OSPF:
+!           network {prefisso}/{netmask} area {area-id}
+!           [area {area-id} {area-type: (backbone), stub} {option: no-summary}]
+!           [default-information originate always]
 !
-! router {protocollo: rip/ospf/bgp/...}
+!       RIP:
+!           network {prefisso}/{netmask}
+!           route   {prefisso}/{netmask}
 !
-! OSPF:
-! network {prefisso}/{netmask} area {area-id}
-! area {area-id} {area-type: (backbone)/stub} {option: no-summary}
+!       redistribute {tabella: kernel, connected, bgp [route-map {nome-rmap}]} 
+!   
+!   PROTOCOLLI EGP:
+!       OPZIONI DI DEBUG BGP:
+!          [debug bgp keepalives]
+!          [debug bgp updates in]
+!          [debug bgp updates out]
+!       OPZIONI ZEBRA:
+!           [password zebra]
+!           [enable password zebra]
 !
-! RIP: 
-! network {prefisso}/{netmask}
-! route {prefisso}/{netmask}
+!       BGP:
+!           [no bgp network import-check]
+!           [no bgp ebgp-requires-policy] 
+!           neighbor  {indirizzo-peer} remote-as {as-di-peer}
+!           [neighbor {indirizzo-peer} description {descrizione}]
+!           [neighbor {indirizzo-peer} prefix-list {nome-lista} {tipo: in, out}]
+!           [neighbor {indirizzo-peer} filter-list {nome-lista} {tipo: in, out}]
+!           [neighbor {indirizzo-peer} [default-originate] route-map {nome-rmap} {tipo: in, out}]
+!           [neighbor {indirizzo-peer} update-source {prefisso}/{netmask}]
+!           [neighbor {indirizzo-peer} default-originate]
 !
-! GENERAL:
-! redistribute connected
-! redistribute BGP 
+!           [access-list {nome-lista} [exact-match] permit {prefisso}/{netmask}]
 !
-! # TODO add BGP 
-
-
-log file /var/log/frr/frr.log
+!           [ip prefix-list {nome-lista} [seq {seq-num}] permit {(any), {prefisso}/{netmask}}]
+!
+!           network {prefisso}/{netmask}
+!           [redistribute {tabella: connected}]
+!
+!           
+!           [route-map {{nome-lista}, {nome-rmap}} {tipo: permit/deny} {seq-num}
+!               [match ip address {indirizzo}]
+!               [match ip access-list {nome-l}]
+!               [match ip prefix-list {nome-l}]
+!               [match ip next-hop {address {indirizzo}, prefix-list {nome-l}, access-list {nome-l}}]
+!               [match ip origin {address {indirizzo}, prefix-list {nome-l}, access-list {nome-l}}]
+!               [match as-path {path}]
+!               [set {parametro: local-preference, metric, origin, next-hop} {valore}]
+!           ]
+!           
+!           [bgp as-path access-list {nome-filter/access-list} {tipo: permit, deny} {regexp}]
+!
+!
+!
+! CONFIGURARE LOG: 
+!   log file /var/log/frr/frr.log
