Piccolo errore grammaticale

--- a/Esercizi/labs/nefertiti/r2/etc/frr/frr.conf
+++ b/Esercizi/labs/nefertiti/r2/etc/frr/frr.conf
@@ -76,7 +76,7 @@
 ! CONFIGURARE LOG: 
 !   log file /var/log/frr/frr.log
 
-route rip
+router rip
     network 93.0.0.0/24
     redistribute connected
     redistribute bgp route-map eBGP
