update frr.conf template

--- a/Esercizi/lab-template/etc/frr/frr.conf
+++ b/Esercizi/lab-template/etc/frr/frr.conf
@@ -53,20 +53,21 @@
 !
 !           [access-list {nome-lista} [exact-match] permit {prefisso}/{netmask}]
 !
-!           [ip prefix-list {nome-lista} [seq {seq-num}] permit {(any), {prefisso}/{netmask}}]
+!           [ip prefix-list {nome-lista} [seq {seq-num}] permit {(any), {prefisso}/{netmask}} [le 32]]
+!
+!           [bgp community-list standard {nome-lista} permit {X}:{Y}]
 !
 !           network {prefisso}/{netmask}
 !           [redistribute {tabella: connected}]
 !
 !           
 !           [route-map {{nome-lista}, {nome-rmap}} {tipo: permit/deny} {seq-num}
-!               [match ip address {indirizzo}]
-!               [match ip access-list {nome-l}]
-!               [match ip prefix-list {nome-l}]
-!               [match ip next-hop {address {indirizzo}, prefix-list {nome-l}, access-list {nome-l}}]
-!               [match ip origin {address {indirizzo}, prefix-list {nome-l}, access-list {nome-l}}]
+!               [match ip address {{indirizzo}, {nome-access-list}, prefix-list {nome-l}}]
+!               [match ip next-hop {{indirizzo}, {nome-access-list}, prefix-list {nome-l}}]
+!               [match ip origin {{indirizzo}, {nome-access-list}, prefix-list {nome-l}}]
 !               [match as-path {path}]
-!               [set {parametro: local-preference, metric, origin, next-hop} {valore}]
+!               [match community {nome-lista-community}]
+!               [set {parametro: local-preference, metric, origin, next-hop, community} {valore}]
 !           ]
 !           
 !           [bgp as-path access-list {nome-filter/access-list} {tipo: permit, deny} {regexp}]
