update two-sandwiches and lab-template/README

--- a/Esercizi/lab-template/etc/frr/frr.conf
+++ b/Esercizi/lab-template/etc/frr/frr.conf
@@ -67,7 +67,7 @@
 !               [match ip origin {{indirizzo}, {nome-access-list}, prefix-list {nome-l}}]
 !               [match as-path {path}]
 !               [match community {nome-lista-community}]
-!               [set {parametro: local-preference, metric, origin, next-hop, community} {valore}]
+!               [set {parametro: local-preference, metric, ip origin, ip next-hop, community} {valore}]
 !           ]
 !           
 !           [bgp as-path access-list {nome-filter/access-list} {tipo: permit, deny} {regexp}]
