--- a/Esercizi/labs/two-sandwiches/r8/etc/frr/frr.conf
+++ b/Esercizi/labs/two-sandwiches/r8/etc/frr/frr.conf
@@ -14,29 +14,21 @@ router bgp 3
 
     neighbor 5.5.5.1 remote-as 1
     neighbor 5.5.5.1 description AS1(r3)
-    neighbor 5.5.5.1 route-map localPrefInAS1 in 
     neighbor 5.5.5.4 remote-as 4
     neighbor 5.5.5.4 description AS4(r7)
-    neighbor 5.5.5.4 route-map localPrefInAS4 in 
     neighbor 30.10.0.2 remote-as 3
     neighbor 30.10.0.2 description AS3(r9)
-
-    ip prefix-list myProvider permit 5.5.5.2/32
+    
+    neighbor 5.5.5.1 prefix-list myProviderAS1 in 
+    neighbor 5.5.5.4 prefix-list myProviderAS4 in 
 
     network 30.0.0.0/8
     network 5.5.5.0/24
 
-    route-map localPrefInAS1 permit 5
-        match ip next-hop prefix-list myProvider
-        set local-preference 90
+    ip prefix-list myProviderAS1 deny 5.5.5.2/32
+    ip prefix-list myProviderAS1 permit any
 
-    route-map localPrefInAS1 permit 10
-
-    route-map localPrefInAS4 permit 5
-        match ip next-hop prefix-list myProvider
-        set local-preference 90
-
-    route-map localPrefInAS4 permit 10
-
+    ip prefix-list myProviderAS4 deny 5.5.5.2/32
+    ip prefix-list myProviderAS4 permit any
 
 log file /var/log/frr/frr.log
