--- a/Esercizi/labs/two-sandwiches/r1/etc/frr/frr.conf
+++ b/Esercizi/labs/two-sandwiches/r1/etc/frr/frr.conf
@@ -1,7 +1,7 @@
 router rip 
     network 100.0.0.0/8
     redistribute connected
-    redistribute bgp
+    redistribute bgp route-map eBGP
 
 debug bgp keepalives
 debug bgp updates in
@@ -17,15 +17,20 @@ router bgp 1
     neighbor 100.30.0.2 update-source 100.20.0.1
     neighbor 41.0.0.4 remote-as 4
     neighbor 41.0.0.4 description AS4(r10)
-    neighbor 41.0.0.4 route-map prefCustomer in
-    ! neighbor 41.0.0.4 route-map metricCustomer out
 
+    neighbor 41.0.0.4 route-map prefCustomer in
+    neighbor 41.0.0.4 route-map eBGP in 
 
     network 100.0.0.0/8
     network 41.0.0.0/24
 
     route-map prefCustomer permit 10
         set local-preference 150
+
+    ip prefix-list myNeighbors permit 41.0.0.0/24 le 32
+
+    route-map eBGP permit 5
+        match ip next-hop prefix-list myNeighbors
 
 
 
