--- a/Esercizi/labs/two-sandwiches/r10/etc/frr/frr.conf
+++ b/Esercizi/labs/two-sandwiches/r10/etc/frr/frr.conf
@@ -17,12 +17,15 @@ router bgp 4
     neighbor 41.0.0.1 remote-as 1
     neighbor 41.0.0.1 description AS1(r1)
     neighbor 41.0.0.1 route-map prefProvider in
-    ! neighbor 41.0.0.1 route-map metricProvider out
+    neighbor 41.0.0.1 prefix-list localOut out
 
     network 40.0.0.0/8
     network 41.0.0.0/24
 
+    ip prefix-list localOut permit 40.0.0.0/8 le 32
+    ip prefix-list localOut deny any
+
     route-map prefProvider permit 10
-        set local-preference 50
+        set local-preference 90
 
 log file /var/log/frr/frr.log
