--- a/Esercizi/labs/two-sandwiches/r7/etc/frr/frr.conf
+++ b/Esercizi/labs/two-sandwiches/r7/etc/frr/frr.conf
@@ -15,29 +15,21 @@ router bgp 4
 
     neighbor 5.5.5.2 remote-as 2 
     neighbor 5.5.5.2 description AS2(r4)
-    neighbor 5.5.5.2 route-map localPrefInAS2 in
     neighbor 5.5.5.3 remote-as 3
     neighbor 5.5.5.3 description AS3(r8)
-    neighbor 5.5.5.3 route-map localPrefInAS3 in
     neighbor 40.20.0.1 remote-as 4
     neighbor 40.20.0.1 description AS4(r10)
 
-    ip prefix-list myProvider permit 5.5.5.1/32
+    neighbor 5.5.5.2 prefix-list myProviderAS2 in
+    neighbor 5.5.5.3 prefix-list myProviderAS3 in
 
     network 40.0.0.0/8
     network 5.5.5.0/24
 
-    route-map localPrefInAS2 permit 5
-        match ip next-hop prefix-list myProvider
-        set local-preference 90
-    
-    route-map localPrefInAS2 permit 10
+    ip prefix-list myProviderAS2 deny 5.5.5.1/32
+    ip prefix-list myProviderAS2 permit any
 
-    route-map localPrefInAS3 permit 5
-        match ip next-hop prefix-list myProvider
-        set local-preference 90
-
-    route-map localPrefInAS3 permit 10
-
+    ip prefix-list myProviderAS3 deny 5.5.5.1/32
+    ip prefix-list myProviderAS3 permit any
 
 log file /var/log/frr/frr.log
