--- a/Esercizi/labs/two-sandwiches/r9/etc/frr/frr.conf
+++ b/Esercizi/labs/two-sandwiches/r9/etc/frr/frr.conf
@@ -18,11 +18,15 @@ router bgp 3
     neighbor 30.10.0.1 remote-as 3
     neighbor 30.10.0.1 description AS3(r8)
     neighbor 32.0.0.2 route-map prefProvider in
+    neighbor 32.0.0.2 prefix-list localOut out
 
     network 30.0.0.0/8
     network 32.0.0.0/24
 
+    ip prefix-list localOut permit 30.0.0.0/8 le 32
+    ip prefix-list localOut deny any
+
     route-map prefProvider permit 10
-        set local-preference 50
+        set local-preference 90
 
 log file /var/log/frr/frr.log
