--- a/Esercizi/labs/two-sandwiches/r3/etc/frr/frr.conf
+++ b/Esercizi/labs/two-sandwiches/r3/etc/frr/frr.conf
@@ -1,7 +1,8 @@
 router rip
     network 100.0.0.0/8
     redistribute connected
-    redistribute bgp route-map eBGP
+    redistribute bgp route-map eBGP-AS2
+    redistribute bgp route-map eBGP-AS3
 
 
 debug bgp keepalives
@@ -12,7 +13,6 @@ debug bgp updates out
 router bgp 1
     no bgp ebgp-requires-policy
     no bgp network import-check
-     
 
     neighbor 100.20.0.1 remote-as 1
     neighbor 100.20.0.1 description AS1(r1)
@@ -22,13 +22,18 @@ router bgp 1
     neighbor 5.5.5.3 remote-as 3
     neighbor 5.5.5.3 description AS3(r8)
 
-    ip prefix-list myNeighbors permit 5.5.5.0 le 32
-    
+    neighbor 5.5.5.2 route-map eBGP-AS2 in
+    neighbor 5.5.5.3 route-map eBGP-AS3 in
+
     network 100.0.0.0/8
     network 5.5.5.0/24
 
-    route-map eBGP permit 10
-        match ip next-hop prefix-list myNeighbors
+    ip prefix-list myNeighbors permit 5.5.5.0/24 le 32
 
+    route-map eBGP-AS2 permit 10
+        match ip next-origin prefix-list myNeighbors
+
+    route-map eBGP-AS3 permit 10
+        match ip next-origin prefix-list myNeighbors
 
 log file /var/log/frr/frr.log
