--- a/Esercizi/labs/two-sandwiches/r7/etc/frr/frr.conf
+++ b/Esercizi/labs/two-sandwiches/r7/etc/frr/frr.conf
@@ -26,10 +26,10 @@ router bgp 4
     network 40.0.0.0/8
     network 5.5.5.0/24
 
-    ip prefix-list myProviderAS2 deny 5.5.5.1/32
+    ip prefix-list myProviderAS2 deny 5.5.5.1/32 le 32
     ip prefix-list myProviderAS2 permit any
 
-    ip prefix-list myProviderAS3 deny 5.5.5.1/32
+    ip prefix-list myProviderAS3 deny 5.5.5.1/32 le 32
     ip prefix-list myProviderAS3 permit any
 
 log file /var/log/frr/frr.log
