--- a/Esercizi/labs/two-sandwiches/r8/etc/frr/frr.conf
+++ b/Esercizi/labs/two-sandwiches/r8/etc/frr/frr.conf
@@ -25,10 +25,10 @@ router bgp 3
     network 30.0.0.0/8
     network 5.5.5.0/24
 
-    ip prefix-list myProviderAS1 deny 5.5.5.2/32
+    ip prefix-list myProviderAS1 deny 5.5.5.2/32 le 32
     ip prefix-list myProviderAS1 permit any
 
-    ip prefix-list myProviderAS4 deny 5.5.5.2/32
+    ip prefix-list myProviderAS4 deny 5.5.5.2/32 le 32
     ip prefix-list myProviderAS4 permit any
 
 log file /var/log/frr/frr.log
