update right-hopscotch, add .pdf

--- a/Esercizi/labs/right-hopscotch/as2r1/etc/frr/frr.conf
+++ b/Esercizi/labs/right-hopscotch/as2r1/etc/frr/frr.conf
@@ -16,17 +16,15 @@ router bgp 2
     neighbor 10.2.4.2 remote-as 4
     neighbor 10.2.4.2 description AS4(r1)
 
-    neighbor 10.1.2.1 prefix-list myCustomerOnly in
-    neighbor 10.2.3.2 prefix-list myCustomerOnly out
+    neighbor 10.1.2.1 prefix-list mineOutOnly in
+    neighbor 10.2.3.2 prefix-list mineOutOnly out
 
     network 10.1.2.0/30
     network 10.2.3.0/30
     network 10.2.4.0/30
 
-    ip prefix-list myCustomerOnly permit 1.0.0.0/8 
-    ip prefix-list myCustomerOnly permit 10.1.2.0/30 
-    ip prefix-list myCustomerOnly permit 10.2.3.0/30
-    ip prefix-list myCustomerOnly permit 10.2.4.0/30
-    ip prefix-list myCustomerOnly deny any
+    ip prefix-list mineOutOnly permit 1.0.0.0/8 
+    ip prefix-list mineOutOnly permit 10.0.0.0/8 le 32
+    ip prefix-list mineOutOnly deny any
 
 log file /var/log/frr/frr.log
