--- a/Esercizi/labs/right-hopscotch/as1r1/etc/frr/frr.conf
+++ b/Esercizi/labs/right-hopscotch/as1r1/etc/frr/frr.conf
@@ -22,8 +22,7 @@ router bgp 1
     network 10.1.3.0/30
 
     ip prefix-list mineOutOnly permit 1.0.0.0/8
-    ip prefix-list mineOutOnly permit 10.1.2.0/30
-    ip prefix-list mineOutOnly permit 10.1.3.0/30
+    ip prefix-list mineOutOnly permit 10.0.0.0/8 le 32
     ip prefix-list mineOutOnly deny any
 
 log file /var/log/frr/frr.log
