--- a/Esercizi/labs/right-hopscotch/as3r1/etc/frr/frr.conf
+++ b/Esercizi/labs/right-hopscotch/as3r1/etc/frr/frr.conf
@@ -29,10 +29,9 @@ router bgp 3
     network 10.2.3.0/30
     network 10.3.4.0/30
 
-    ip prefix-list mineOutOnly permit 3.0.0.0/8
-    ip prefix-list mineOutOnly permit 10.1.3.0/30
-    ip prefix-list mineOutOnly permit 10.2.3.0/30
     ip prefix-list mineOutOnly permit 1.0.0.0/8
+    ip prefix-list mineOutOnly permit 3.0.0.0/8
+    ip prefix-list mineOutOnly permit 10.0.0.0/8 le 32
     ip prefix-list mineOutOnly deny any
 
 log file /var/log/frr/frr.log
