--- a/Esercizi/labs/two-sandwiches/r7/etc/frr/frr.conf
+++ b/Esercizi/labs/two-sandwiches/r7/etc/frr/frr.conf
@@ -20,16 +20,13 @@ router bgp 4
     neighbor 40.20.0.1 remote-as 4
     neighbor 40.20.0.1 description AS4(r10)
 
-    neighbor 5.5.5.2 prefix-list myProviderAS2 in
-    neighbor 5.5.5.3 prefix-list myProviderAS3 in
+    neighbor 5.5.5.3 prefix-list myPeerOut out
 
-    network 40.0.0.0/8
+    network 40.20.0.0/25
     network 5.5.5.0/24
 
-    ip prefix-list myProviderAS2 deny 5.5.5.1/32 le 32
-    ip prefix-list myProviderAS2 permit any
-
-    ip prefix-list myProviderAS3 deny 5.5.5.1/32 le 32
-    ip prefix-list myProviderAS3 permit any
+    ip prefix-list myPeerOut permit 40.20.0.0/25
+    ip prefix-list myPeerOut permit 40.10.0.0/25
+    ip prefix-list myPeerOut permit 41.0.0.0/24
 
 log file /var/log/frr/frr.log
