--- a/Esercizi/labs/two-sandwiches/r8/etc/frr/frr.conf
+++ b/Esercizi/labs/two-sandwiches/r8/etc/frr/frr.conf
@@ -19,16 +19,13 @@ router bgp 3
     neighbor 30.10.0.2 remote-as 3
     neighbor 30.10.0.2 description AS3(r9)
     
-    neighbor 5.5.5.1 prefix-list myProviderAS1 in 
-    neighbor 5.5.5.4 prefix-list myProviderAS4 in 
+    neighbor 5.5.5.4 prefix-list myPeerOut out 
 
     network 30.0.0.0/8
     network 5.5.5.0/24
-
-    ip prefix-list myProviderAS1 deny 5.5.5.2/32 le 32
-    ip prefix-list myProviderAS1 permit any
-
-    ip prefix-list myProviderAS4 deny 5.5.5.2/32 le 32
-    ip prefix-list myProviderAS4 permit any
+    
+    ip prefix-list myPeerOut permit 30.20.0.0/25
+    ip prefix-list myPeerOut permit 30.10.0.0/25
+    ip prefix-list myPeerOut permit 32.0.0.0/24
 
 log file /var/log/frr/frr.log
