update lab templates

--- a/Esercizi/lab-template/leaf-template/etc/frr/frr.conf
+++ b/Esercizi/lab-template/leaf-template/etc/frr/frr.conf
@@ -2,10 +2,19 @@
 ! Si ricorda che deve essere univoco, scelto in base all'indirizzo della loopback 
 ! Configurazione Fat-Tree 2x2
 
+log file /var/log/frr/frr.log
+
+debug bgp keepalives
+debug bgp updates in
+debug bgp updates out
+
+password zebra
+enable password zebra
+
 router bgp {ASN}
     timers bgp 3 9
     bgp router-id {router-id}
-    bo bgp ebgp-requires-policy
+    no bgp ebgp-requires-policy
     bgp bestpath as-path multipath-relax
 
     neighbor TOR peer-group
