--- a/Esercizi/lab-template/spine-template/etc/frr/frr.conf
+++ b/Esercizi/lab-template/spine-template/etc/frr/frr.conf
@@ -5,6 +5,15 @@
 ! In caso contrario modificare la configurazione
 ! Configurazione Fat-Tree 2x2
 
+log file /var/log/frr/frr.log
+
+debug bgp keepalives
+debug bgp updates in
+debug bgp updates out
+
+password zebra
+enable password zebra
+
 router bgp {ASN}
     timers bgp 3 9
     bgp router-id {router-id}
