--- a/Esercizi/lab-template/tof-template/etc/frr/frr.conf
+++ b/Esercizi/lab-template/tof-template/etc/frr/frr.conf
@@ -3,6 +3,15 @@
 ! Non avendo un indirizzo loopback, si usa lo stesso prefisso, mantenendolo univoco
 ! Configurazione Fat-Tree 2x2
 
+log file /var/log/frr/frr.log
+
+debug bgp keepalives
+debug bgp updates in
+debug bgp updates out
+
+password zebra
+enable password zebra
+
 router bgp {ASN}
     timers bgp 3 9
     bgp router-id {router-id}
