--- a/Esercizi/labs/right-hopscotch/as2r1/etc/frr/frr.conf
+++ b/Esercizi/labs/right-hopscotch/as2r1/etc/frr/frr.conf
@@ -18,6 +18,7 @@ router bgp 2
 
     neighbor 10.1.2.1 prefix-list mineOutOnly in
     neighbor 10.2.3.2 prefix-list mineOutOnly out
+    neighbor 10.2.4.2 prefix-list mineOutOnly out
 
     network 10.1.2.0/30
     network 10.2.3.0/30
